--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <canvas id="planetSize">Your browser does not support the HTML canvas tag.</canvas>
 </div>
 <div class="spaceBack"></div>
-<textarea id="input" class="codeSpace" placeholder="Type 'Create World' to begin..."></textarea>
+<div id="input" class="codeSpace" contenteditable="true">
+</div>
 <style>
   .phaser {
     position: absolute;
