--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   }
   @font-face {
     font-family: AnkaCoder;
-    src: url("FiraCode-Regular.otf");
+    src: url("graphicpixel.ttf");
   }
 </style>
 
