--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <canvas id="planetSize">Your browser does not support the HTML canvas tag.</canvas>
 </div>
 <div class="spaceBack"></div>
-<div id="input" class="codeSpace" contenteditable="true"></div>
+<div id="input" class="codeSpace" contenteditable="true">Create World</div>
 <div id="history" class="fileHistory"><span>File History:</span></div>
 <style>
   .phaser {
