--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
       hasBeenCreated = true;
       addHistory("green");
       createWorld();
+      createPeople();
     } else {
       if (newCode != "" && newCode.toLowerCase() != "create world") {
       newCode = "\"" + newCode + "\"" + ": Command Not Found";
