--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     imgf = document.getElementById("imgf");
     fc.style.position = "absolute";
     fc.style.width = 7.5 + "%";
-    fc.style.height = "auto";
+    fc.style.height = 24 + "%";
     fc.style.top = rT / 40 * 100 + "%";
     fc.style.left = rL / 40 * 100 + "%";
     fc.style.zIndex = 7;
@@ -281,7 +281,7 @@
     fc2.style.top = 0 + "%";
     fc2.style.left = 0 + "%";
     fc3.innerHTML = "Your browser does not support the HTML canvas tag.";
-    fc3.style.position = absolute;
+    fc3.style.position = "absolute";
     fc1.style.width = 100 + "%";
     fc1.style.height = 100 + "%";
     fc1.style.top = 0 + "%";
