--- a/index.html
+++ b/index.html
@@ -286,8 +286,10 @@
     fc2.style.left = 0 + "%";
     fc3.innerHTML = "Your browser does not support the HTML canvas tag.";
     fc3.style.position = "absolute";
-    fc3.style.width = 100 + "%";
-    fc3.style.height = 100 + "%";
+    fc3.style.width = window.innerHeight * 0.4 * 0.075 + "px";
+    fc3.style.height = window.innerHeight * 0.4 * 0.24 + "px";
+    fc3.width = window.innerHeight * 0.4 * 0.075;
+    fc3.height = window.innerHeight * 0.4 * 0.24;
     fc3.style.top = 0 + "%";
     fc3.style.left = 0 + "%";
     fc1.style.zIndex = 2;
