--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     font-family: AnkaCoder;
     src: url("graphicpixel.ttf");
   }
-  .translate {
+  .fc {
     tranform: translate(-50%, -50%);
   }
 </style>
@@ -266,7 +266,7 @@
     fc.appendChild(fc3);
     imgf = document.getElementById("imgf");
     fc.style.position = "absolute";
-    fc.classList.add("translate");
+    fc.classList.add("fc");
     fc.style.width = 7.5 + "%";
     fc.style.height = 24 + "%";
     fc.style.top = rT / 40 * 100 + "%";
