--- a/index.html
+++ b/index.html
@@ -143,6 +143,12 @@
   document.getElementById("planetSize").width = window.innerHeight * 0.4;
   document.getElementById("planetSize").height = window.innerHeight * 0.4;
   window.addEventListener("resize", function() {
+    if (peopleBeenCreated == true) {
+    fc3.style.width = window.innerHeight * 0.14 + "px";
+    fc3.style.height = window.innerHeight * 0.48 + "px";
+    fc3.width = window.innerHeight * 0.14;
+    fc3.height = window.innerHeight * 0.48;
+    }
     document.getElementById("grassImg").style.top = topA / 100 * window.innerHeight + "px";
     document.getElementById("grassImg").style.left = left / 100 * window.innerHeight + "px";
     document.getElementById("grassImg").style.width = window.innerHeight * 2 + "px";
@@ -257,11 +263,13 @@
     phaser.src = "Phase ".concat(frame.toString(), ".png");
     }, (frame - 2) * 50);
   }
+  peopleBeenCreated = false;
   function createPeople() {
     fc = document.createElement("div");
     fc1 = document.createElement("img");
     fc2 = document.createElement("div");
     fc3 = document.createElement("canvas");
+    peopleBeenCreated = true;
     fc.appendChild(fc1);
     fc.appendChild(fc2);
     fc.appendChild(fc3);
@@ -287,10 +295,10 @@
     fc2.style.left = 0 + "%";
     fc3.innerHTML = "Your browser does not support the HTML canvas tag.";
     fc3.style.position = "absolute";
-    fc3.style.width = window.innerHeight * 0.056 + "px";
-    fc3.style.height = window.innerHeight * 0.096 + "px";
-    fc3.width = window.innerHeight * 0.056;
-    fc3.height = window.innerHeight * 0.096;
+    fc3.style.width = window.innerHeight * 0.14 + "px";
+    fc3.style.height = window.innerHeight * 0.48 + "px";
+    fc3.width = window.innerHeight * 0.14;
+    fc3.height = window.innerHeight * 0.48;
     fc3.style.top = 0 + "%";
     fc3.style.left = 0 + "%";
     fc1.style.zIndex = 2;
