--- a/index.html
+++ b/index.html
@@ -143,7 +143,19 @@
   document.getElementById("planetSize").width = window.innerHeight * 0.4;
   document.getElementById("planetSize").height = window.innerHeight * 0.4;
   window.addEventListener("resize", function() {
-
+    if (peopleBeenCreated == true) {
+    fc3.innerHTML = "Your browser does not support the HTML canvas tag.";
+    fc3.style.position = "absolute";
+    fc3.style.width = window.innerHeight * 0.14 + "px";
+    fc3.style.height = window.innerHeight * 0.48 + "px";
+    fc3.width = window.innerHeight * 0.14;
+    fc3.height = window.innerHeight * 0.48;
+    fc3.style.top = 0 + "%";
+    fc3.style.left = 0 + "%";
+    fc1.style.zIndex = 2;
+    fctx = fc3.getContext("2d");
+    fctx.drawImage(imgf, 0, 0, fc3.width, fc3.height);
+    }
     document.getElementById("grassImg").style.top = topA / 100 * window.innerHeight + "px";
     document.getElementById("grassImg").style.left = left / 100 * window.innerHeight + "px";
     document.getElementById("grassImg").style.width = window.innerHeight * 2 + "px";
